fixed footer spacing

--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    padding-bottom: 10%;
 
 }
 
@@ -18,6 +19,7 @@ input{
 
 textarea{
     height: 100px;
+    width: 60%;
     border-radius: 15px;
     text-align: center;
     font-size: 20px;    
