--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -1,11 +1,13 @@
-.projectsPage, .contactPage, #about{
-    padding-top: 240px;
+@media (min-width: 551px){
+    .projectsPage, .contactPage, #about{
+        padding-top: 240px;
+    }
 }
 
-.projectGrid{
-    margin-top: -2%;
-    padding-top: 2%;
-    z-index: 2;
+@media (max-width: 550px){
+    .projectsPage, .contactPage, #about{
+        padding-top: 140px;
+    }
 }
 
 img{
@@ -13,11 +15,9 @@ img{
     border-radius: 15px;
 }
 
-
 .skewBackground{
-    width: 100%;
-    border-radius: 0;
-}
+    border-radius: none !important;
+} 
 
 .notedBackground{
     background-color: #909090;
@@ -25,13 +25,6 @@ img{
 
 .todoBackground{
     background-color: #FFC9DE;
-}
-
-
-.titleContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
 }
 
 .title{
@@ -80,7 +73,7 @@ img{
 }
 
 .zenGarden{
-    margin-bottom: 40%;
+    padding-bottom: 20%;
 }
 
 
